# xplore_rover_competition

./: .gitignore
Rasberry_/: .gitignore
Rasberry_/maps/: DLL1.pgm  DLL1.yaml  DLL2.pgm  DLL2.yaml
Rasberry_/rover_commands/: package.xml  setup.py
Rasberry_/rover_commands/launch/: camera_launch.py
Rasberry_/rover_commands/rover_commands/: diff_drive.py  diff_drive_with_arm.py  rpi_velocity_subscriber.py  two_axes_controller.py  velocity_2_wheels.py
baldybot_cs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
baldybot_cs/install/baldybot_cs_bringup/share/baldybot_cs_bringup/: local_setup.sh  package.bash  package.sh  package.zsh
baldybot_cs/install/baldybot_cs_bringup/share/baldybot_cs_bringup/launch/: teleop_joystick_arm_gripper.py
baldybot_cs/install/baldybot_cs_commands/lib/baldybot_cs_commands/: arm_gripper_commands  slow_joy  two_wheel_joy
baldybot_cs/install/baldybot_cs_commands/share/baldybot_cs_commands/: package.dsv  package.sh  package.xml  package.zsh
baldybot_cs/log/: latest_build  latest_list
baldybot_cs/src/baldybot_cs_bringup/: CMakeLists.txt
baldybot_cs/src/baldybot_cs_bringup/config/: teleop_joystick.yaml
baldybot_cs/src/baldybot_cs_commands/: setup.cfg  setup.py
baldybot_cs/src/baldybot_cs_commands/baldybot_cs_commands/: slow_joy.py
baldybot_cs/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
baldybot_cs/src/install/baldybot_cs_bringup/share/baldybot_cs_bringup/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
baldybot_cs/src/log/: latest_build
(+6 files in other folders)
