<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_commands</name>
  <version>0.0.0</version>
  <description>Package for controlling the rover and interfacing with a camera.</description>
  <maintainer email="xplore@todo.todo">xplore</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>  <!-- Added for camera support -->
  <exec_depend>rqt_image_view</exec_depend>  <!-- Added for visualization -->
  <exec_depend>launch</exec_depend>  <!-- Required for launch files -->
  <exec_depend>launch_ros</exec_depend>  <!-- Required for ROS 2 launch system -->

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
